k8s/sarsys.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sarsys
---
apiVersion: v1
kind: Service
metadata:
  name: sarsys-app-server
  namespace: sarsys
spec:
  selector:
    app: sarsys-app-server
    role: backend
    type: api
  ports:
    - port: 80
      targetPort: 8082
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sarsys-app-server
  namespace: sarsys
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: sarsys.app
      http:
        paths:
          - path: /api/
            backend:
              serviceName: sarsys-app-server
              servicePort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sarsys-app-server
  namespace: sarsys
  labels:
    app: sarsys-app-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sarsys-app-server
  template:
    metadata:
      labels:
        app: sarsys-app-server
        role: backend
        type: api
    spec:
      containers:
        - name: sarsys-app-server
          image: discoos/sarsys_app_server:latest
          # In development, setting `imagePullPolicy: Always` and using :latest tag is useful.
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          # Load configuration
          resources:
            requests:
              cpu: "250m"
              memory: "400Mi"
            limits:
              cpu: "500m"
              memory: "800Mi"
          readinessProbe:
            httpGet:
              path: /api/healthz
              port:  8082
              scheme: HTTP
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /api/healthz
              port:  8082
              scheme: HTTP
            initialDelaySeconds: 30
      securityContext:
        runAsNonRoot: true
      serviceAccountName: sarsys-user
